--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.3.2",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
